--- a/index.html
+++ b/index.html
@@ -1,191 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TenantMatch – Find Quality Tenants Fast</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
-</head>
-<body class="bg-gradient-to-b from-white to-slate-50 text-slate-800">
-  <!-- Header -->
-  <header class="sticky top-0 bg-white/80 backdrop-blur border-b z-40">
-    <div class="max-w-6xl mx-auto px-4 flex items-center justify-between h-16">
-      <div class="flex items-center gap-2 text-lg font-semibold">
-        🏠 TenantMatch
-      </div>
-      <nav class="hidden md:flex gap-6 text-sm">
-        <a href="#services" class="hover:text-rose-600">Services</a>
-        <a href="#process" class="hover:text-rose-600">Process</a>
-        <a href="#pricing" class="hover:text-rose-600">Pricing</a>
-        <a href="#contact" class="hover:text-rose-600">Contact</a>
-      </nav>
-      <a href="#contact" class="hidden sm:inline-block bg-rose-600 hover:bg-rose-700 text-white text-sm font-medium px-4 py-2 rounded-lg">Get Tenants Faster</a>
-    </div>
-  </header>
+<form action="https://formspree.io/f/mkgpbpjz" method="POST" class="bg-white p-6 rounded-2xl shadow-lg space-y-3">
+  <h3 class="text-xl font-semibold">Send a message</h3>
 
-  <!-- Hero -->
-  <section class="max-w-6xl mx-auto px-4 py-16 grid md:grid-cols-2 gap-10 items-center">
-    <div>
-      <h1 class="text-4xl md:text-5xl font-bold leading-tight">Quality tenants. <span class="text-rose-600">Less vacancy.</span> Zero hassle.</h1>
-      <p class="mt-4 text-lg text-slate-600">We help real estate owners fill rentals—from cozy houses to large buildings—with vetted tenants you can trust.</p>
-      <div class="mt-6 flex flex-col sm:flex-row gap-3">
-        <a href="#contact" class="bg-rose-600 hover:bg-rose-700 text-white px-6 py-3 rounded-lg text-center font-medium">Request a Free Rent-Ready Review →</a>
-        <a href="#pricing" class="border border-slate-300 hover:border-rose-600 hover:text-rose-600 px-6 py-3 rounded-lg text-center font-medium">See Pricing</a>
-      </div>
-      <div class="mt-8 grid grid-cols-3 gap-4 text-center">
-        <div class="border rounded-lg p-3">
-          <div class="text-xl font-semibold">&lt;14 days</div>
-          <div class="text-xs text-slate-500">Typical time-to-tenant</div>
-        </div>
-        <div class="border rounded-lg p-3">
-          <div class="text-xl font-semibold">98%</div>
-          <div class="text-xs text-slate-500">On-time lease execution</div>
-        </div>
-        <div class="border rounded-lg p-3">
-          <div class="text-xl font-semibold">3,000+</div>
-          <div class="text-xs text-slate-500">Listings optimized</div>
-        </div>
-      </div>
-    </div>
-    <div class="bg-white shadow-xl rounded-2xl p-6">
-      <h2 class="text-xl font-semibold mb-2">Free Vacancy Audit</h2>
-      <p class="text-sm text-slate-600 mb-4">Get a quick score of your listing’s rent-readiness in under a minute.</p>
-      <form class="space-y-3">
-        <input type="text" placeholder="Property Address" class="w-full border rounded-lg px-3 py-2 text-sm">
-        <input type="text" placeholder="Monthly Rent (USD/CAD)" class="w-full border rounded-lg px-3 py-2 text-sm">
-        <textarea placeholder="Notes (availability date, pet policy)" class="w-full border rounded-lg px-3 py-2 text-sm"></textarea>
-        <button type="submit" class="w-full bg-rose-600 hover:bg-rose-700 text-white py-2 rounded-lg font-medium">Get My Audit</button>
-      </form>
-    </div>
-  </section>
+  <!-- Hidden anti-spam + subject fields -->
+  <input type="hidden" name="_subject" value="New TenantMatch Inquiry">
+  <input type="text" name="_gotcha" style="display:none">
 
-  <!-- Services -->
-  <section id="services" class="py-16 bg-white">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-8">What we do</h2>
-      <div class="grid md:grid-cols-3 gap-6 text-sm text-slate-600">
-        <div class="border rounded-xl p-5 hover:shadow-md">
-          <h3 class="font-semibold text-lg mb-2 text-slate-800">Pro Marketing</h3>
-          <p>Professional photos, listings on top platforms, and targeted ads to fill vacancies fast.</p>
-        </div>
-        <div class="border rounded-xl p-5 hover:shadow-md">
-          <h3 class="font-semibold text-lg mb-2 text-slate-800">Tenant Screening</h3>
-          <p>Credit, employment, and landlord references to ensure reliable tenants.</p>
-        </div>
-        <div class="border rounded-xl p-5 hover:shadow-md">
-          <h3 class="font-semibold text-lg mb-2 text-slate-800">Showings & Tours</h3>
-          <p>We manage in-person and virtual showings with pre-qualified applicants.</p>
-        </div>
-        <div class="border rounded-xl p-5 hover:shadow-md">
-          <h3 class="font-semibold text-lg mb-2 text-slate-800">Lease & Move-in</h3>
-          <p>Offer negotiation, e-sign leases, and inspection checklists.</p>
-        </div>
-        <div class="border rounded-xl p-5 hover:shadow-md">
-          <h3 class="font-semibold text-lg mb-2 text-slate-800">Compliance</h3>
-          <p>Fair-housing compliance and local regulation expertise.</p>
-        </div>
-        <div class="border rounded-xl p-5 hover:shadow-md">
-          <h3 class="font-semibold text-lg mb-2 text-slate-800">All Property Sizes</h3>
-          <p>From small homes to large multi-unit buildings and portfolios.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  <input type="text" name="name" placeholder="Full Name" class="w-full border rounded-lg px-3 py-2 text-sm" required>
+  <input type="email" name="email" placeholder="Email" class="w-full border rounded-lg px-3 py-2 text-sm" required>
+  <textarea name="message" placeholder="How can we help?" class="w-full border rounded-lg px-3 py-2 text-sm" required></textarea>
 
-  <!-- Process -->
-  <section id="process" class="py-16 bg-slate-50">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-8">How it works</h2>
-      <div class="grid md:grid-cols-3 gap-6 text-sm text-slate-600">
-        <div class="border rounded-xl p-5">
-          <h3 class="font-semibold text-lg mb-1 text-slate-800">1. Quick Intake</h3>
-          <p>Tell us about your unit, ideal tenant, and timeline.</p>
-        </div>
-        <div class="border rounded-xl p-5">
-          <h3 class="font-semibold text-lg mb-1 text-slate-800">2. Market & Screen</h3>
-          <p>We launch listings, capture leads, and qualify applicants.</p>
-        </div>
-        <div class="border rounded-xl p-5">
-          <h3 class="font-semibold text-lg mb-1 text-slate-800">3. Lease & Handover</h3>
-          <p>We finalize the lease, complete inspections, and hand off keys.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Pricing -->
-  <section id="pricing" class="py-16 bg-white">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-8">Simple pricing</h2>
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="border rounded-xl p-6">
-          <h3 class="font-semibold text-lg mb-2">Fill-Only</h3>
-          <div class="text-xl font-bold mb-3">75% of one month’s rent</div>
-          <ul class="text-sm space-y-2 text-slate-600">
-            <li>✔️ Listing & ads</li>
-            <li>✔️ Showings & screening</li>
-            <li>✔️ Lease drafting</li>
-            <li>✔️ Move-in checklist</li>
-          </ul>
-        </div>
-        <div class="border rounded-xl p-6 ring-2 ring-rose-600">
-          <h3 class="font-semibold text-lg mb-2">Fill + Guarantee</h3>
-          <div class="text-xl font-bold mb-3">100% of one month’s rent</div>
-          <ul class="text-sm space-y-2 text-slate-600">
-            <li>✔️ Everything in Fill-Only</li>
-            <li>✔️ 90-day replacement guarantee</li>
-            <li>✔️ Premium photos</li>
-            <li>✔️ Priority showings</li>
-          </ul>
-        </div>
-        <div class="border rounded-xl p-6">
-          <h3 class="font-semibold text-lg mb-2">Portfolio</h3>
-          <div class="text-xl font-bold mb-3">Custom</div>
-          <ul class="text-sm space-y-2 text-slate-600">
-            <li>✔️ Multi-unit campaigns</li>
-            <li>✔️ Owner portal setup</li>
-            <li>✔️ Bulk screening</li>
-            <li>✔️ Dedicated manager</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="py-16 bg-slate-50">
-    <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-2 gap-8 items-start">
-      <div>
-        <h2 class="text-3xl font-bold mb-4">Contact us</h2>
-        <p class="text-slate-600 mb-4">Tell us about your property and we’ll respond within one business day.</p>
-        <p class="text-sm"><strong>📞</strong> (555) 123-4567<br><strong>✉️</strong> hello@tenantmatch.co<br><strong>📍</strong> 123 Main St, Your City</p>
-      </div>
-      <form action="https://formspree.io/f/mkgpbpjz" method="POST" class="bg-white p-6 rounded-2xl shadow-lg space-y-3">
-        <h3 class="text-xl font-semibold">Send a message</h3>
-        <input type="text" name="name" placeholder="Full Name" class="w-full border rounded-lg px-3 py-2 text-sm" required>
-        <input type="email" name="email" placeholder="Email" class="w-full border rounded-lg px-3 py-2 text-sm" required>
-        <textarea name="message" placeholder="How can we help?" class="w-full border rounded-lg px-3 py-2 text-sm" required></textarea>
-        <button type="submit" class="w-full bg-rose-600 hover:bg-rose-700 text-white py-2 rounded-lg font-medium">Submit</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="py-10 border-t bg-white text-sm text-slate-600">
-    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center gap-3">
-      <p>© <span id="year"></span> TenantMatch • <a href="#" class="hover:underline">Privacy</a> • <a href="#" class="hover:underline">Terms</a></p>
-      <p>Serving single homes to high-rise buildings.</p>
-    </div>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+  <button type="submit" class="w-full bg-rose-600 hover:bg-rose-700 text-white py-2 rounded-lg font-medium">
+    Submit
+  </button>
+</form>
